src/objects/Plan_Goal__c.object
<CustomObject>
    <customHelpPage>Help_PlanGoals</customHelpPage>
    <description>Goals comprise the plan.</description>
    <fields>
        <fullName>Area_of_Importance__c</fullName>
        <inlineHelpText>The developmental area as described in the functional domain summaries</inlineHelpText>
        <label>Area of Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Personal Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional Well-Being</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Well-Being</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Well-Being</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <formula>Plan__r.Case__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <inlineHelpText>If goal type is &quot;Other&quot;, please enter an unique description in &quot;Goal Name&quot;.</inlineHelpText>
        <label>Goal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Positive Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety in My Home &amp; Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision-making Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Important_steps_to_reach_this_goal__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>List the most important steps that the individual, family, support network and support team must do for the individual to achieve this goal.</inlineHelpText>
        <label>Important steps to reach this goal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Important_to_me_because__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Why this goal is important to the individual and how the goal will improve the individual&apos;s quality of life.</inlineHelpText>
        <label>Important to me because</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <description>Plan</description>
        <inlineHelpText>Plan</inlineHelpText>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plan Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Plan__r.Case__r.Subject</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Plan Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encrypted>true</encrypted>
        <label>Goal Name (If Goal Type is &apos;Other&apos;)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Goals</pluralLabel>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>**丄具슞七풑 妶斏麛좶랒웇쟄颡ꁚ 苻膃炌緄饩怞떦橴鰀 蔵筫踱峬姷됴僦껓쓑 脇麳ꉳ嶓鲭萆菙麴言 尺珸奖췼믵殁勝癃谀 戩滂嘏跐瘋鞁삘퓵圀 塊釚쑭騭燮詐櫃뷖룑 呣늆恊랼昃냠먉쑣쟑 枸씻槬劜워憡滔摑껑 洇隄刈妾牌撕듣ꍄ뿑 裩獊漬峈뽘疍羑惛鄀 蔵筫踱峬姷됴僦껓쓑.&amp;\\ ䷀仄䷀䷀䷈56308!</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Navigator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Coordinator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;, 
CreatedById &lt;&gt; $User.Id,
Plan__r.Case__r.OwnerId &lt;&gt;$User.Id    
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>